# tollgate

./: .gitignore  CLAUDE.md  README.md  TROUBLESHOOTING.md  pyproject.toml
docs/: SOURCES.md  usage.md  why.md
src/tollgate/: __init__.py  api.py  cli.py
src/tollgate/explain/: explainer.py  prompts.py
src/tollgate/generator/: synthetic_fixtures.py
src/tollgate/report/: markdown_report.py
src/tollgate/schemas/: pacs.008.001.08.xsd
src/tollgate/validation/: address_rule.py  charset_rule.py  mandatory_gap_rule.py  truncation_rule.py  xsd_validator.py
tests/: test_address_rule.py  test_batch_checking.py  test_charset_rule.py  test_cli.py  test_currency_rule.py  test_data_handling.py  test_edge_cases.py  test_eval_harness.py  test_explainer.py  test_inject_error.py  test_mandatory_gap_rule.py  test_truncation_rule.py
tests/evals/: eval_harness.py
