[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iso-tollgate"
version = "0.1.0"
description = "Pre-submission safety gate for ISO 20022 payment messages. Catches the gap between schema-valid and network-acceptable before you submit."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Arun" }
]
keywords = ["iso20022", "pacs.008", "payments", "fedwire", "swift", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "xmlschema>=3.0",
    "lxml>=5.0",
    "typer>=0.12",
    "rich>=13.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/iso-tollgate/tollgate"
Repository = "https://github.com/iso-tollgate/tollgate"
Issues = "https://github.com/iso-tollgate/tollgate/issues"
Documentation = "https://github.com/iso-tollgate/tollgate/blob/main/docs/usage.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
tollgate = "tollgate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tollgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
